--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 							<img class="img-responsive center-block" src="images/markup.png" >
 						</div>
 						<h1 class="name">Armando Toda</h1>
-						<div class="schooling">PhD. Student</div>
+						<div class="schooling">PhD. in Computer Science</div>
+						<div class="schooling">PDRA @ Durham University</div>
 					</div>
 					<!-- DADOS DE CONTATO -->
 					<div class="col-md-12 no-padding">
@@ -59,7 +60,7 @@
 
 							<li>
 								<i class="fa fa-paper-plane" aria-hidden="true"></i>
-								armando.toda@usp.br
+								armando.toda@gmail.com
 							</li>
 
 						</ul>
@@ -71,7 +72,7 @@
 							<h2>About me</h2>
 							<div class="divisor"><i class="fa fa-user" aria-hidden="true"></i></div>
 							<p>
-							I'm a PhD. student at University of Sao Paulo (USP). Former visiting student at Durham University (DU). Have a Bachelor in Computer Sciences at Centro Universitario do Para (CESUPA) and a Master of Sciences degree at Londrina State University (UEL). I've worked in different areas as Image Processing, Computer Graphics, Digital Games, Game-based-learning, Gamification, Artificial Intelligence, Computational Thinking, and Education. My desire is to show the world the benefits offered by games as tools to motivate, engage, and make the world a better place.
+							PhD. in Computer Science in University of Sao Paulo (USP). Former visiting student at Durham University (DU). Have a Bachelor in Computer Sciences at Centro Universitario do Para (CESUPA) and a Master of Sciences degree at Londrina State University (UEL). I've worked in different areas as Image Processing, Computer Graphics, Digital Games, Game-based-learning, Gamification, Artificial Intelligence, Computational Thinking, and Education. My desire is to show the world the benefits offered by games as tools to motivate, engage, and make the world a better place.
 							</p>
 						</div>
 						<!-- REDES SOCIAIS -->
@@ -164,19 +165,19 @@
 								<li>
 									<h3 class="title">
 										<i class="fa fa-newspaper-o" aria-hidden="true"></i>
-										A Taxonomy of Game Elements for Gamification in Educational Contexts: Proposal and Evaluation
+											For whom should we gamify? Insights on the users intentions and context towards gamification in education
 									</h3>
 									<h4>
 										<span class="year">
-											2019
+											2020
 										</span>
 										<span class="authors">
-										Armando M. Toda, Wilk Oliveira, Ana C. Klock, Paula T. Palomino, Marcelo Pimenta, Isabela Gasparini, Lei Shi, Ig Bittencourt, Seiji Isotani and Alexandra I. Cristea 									</h4>
+										Armando Toda, Filipe Dwan Pereira, Ana Carolina Tomé Klock, Luiz Rodrigues, Paula Palomino, Wilk Oliveira, Elaine Harada Teixeira Oliveira, Isabela Gasparini, Alexandra Ioana Cristea, Seiji Isotani 	</h4>
 									<p class="abstract">
-										Gamification has been widely employed in the educational domain over the past eight years when the term became a trend. However, the literature states that gamification still lacks formal definitions to support the design of gamified strategies. This paper aims to create a taxonomy for the game elements, based on gamification experts' opinions. After a brief review from existing work, we extract first the game elements from the current state of the art, and then evaluate them via a survey with 19 gamification and education experts. The resulting taxonomy taxonomy included the description of 21 game elements and their quantitative and qualitative evaluation by the experts. Overall, the proposed taxonomy was in general well accepted by most of the experts. They also suggested expanding it with the inclusion of Narrative and Storytelling game elements. Thus, the main contribution of this paper is proposing a new, confirmed taxonomy to standardise the terminology used to define the game elements as a mean to design and deploy gamification strategies in the educational domain.
+										Gamification design in educational environments is not trivial and many variables need to be considered to achieve positive outcomes. Often, educators and designers do not know when the students intentions on the use of gamified environments might influence their experience. Based on this premise, this paper describes an exploratory study on the users intention to use gamification, focusing on its influence in the field of education. We conducted a survey study with participants (N= 1.692) and analysed their answers using unsupervised data mining techniques. As a result, we obtained empirical evidence showing that demographic and contextual variables influence (positively and negatively) peoples intention to use gamification. This evidence can support designers and educators better understand whether and when they should or should not gamify a learning environment.
 									</p>
 									<p class="download text-right">
-										<a href="https://www.researchgate.net/publication/334480768_A_Taxonomy_of_Game_Elements_for_Gamification_in_Educational_Contexts_Proposal_and_Evaluation">
+										<a href="https://www.researchgate.net/publication/346294371_For_whom_should_we_gamify_Insights_on_the_users'_intentions_and_context_towards_gamification_in_education">
 											<i class="fa fa-download" aria-hidden="true"></i>
 											<span>Link</span>
 										</a>
@@ -186,21 +187,21 @@
 								<li>
 									<h3 class="title">
 										<i class="fa fa-newspaper-o" aria-hidden="true"></i>
-										Validating the Effectiveness of Data-Driven Gamification Recommendations: An Exploratory Study
+										Using learning analytics in the Amazonas: understanding students’ behaviour in introductory programming
 									</h3>
 									<h4>
 										<span class="year">
-											2019
+											2020
 										</span>
 										<span class="authors">
-											Armando M. Toda, Paula T. Palomino, Luiz Rodrigues, Wilk Oliveira, Lei Shi, Seiji Isotani and Alexandra I. Cristea
+											Filipe D Pereira, Elaine HT Oliveira, David BF Oliveira, Alexandra I Cristea, Leandro SG Carvalho, Samuel C Fonseca, Armando Toda, Seiji Isotani
 										</span>
 									</h4>
 									<p class="abstract">
-										Gamification design has benefited from data-driven approaches to creating strategies based on students' characteristics. However, these strategies need further validation to verify their effectiveness in e-learning environments. The exploratory study presented in this paper thus aims at verifying how data-driven gamified strategies are perceived by the students, i.e., the users of e-learning environments. In this study, we conducted a survey presenting 25 predefined strategies, based on a previous study, to students and analysed each strategy's perceived relevance, instanced in an e-learning environment. Our results show that students perceive Acknowledgement, Objective and Progression as important elements in a gamified e-learning environment. We also provide new insights about existing elements and design recommendations for domain specialists.
+										Tools for automatic grading programming assignments, also known as Online Judges, have been widely used to support computer science (CS) courses. Nevertheless, few studies have used these tools to acquire and analyse interaction data to better understand the students’ performance and behaviours, often due to data availability or inadequate granularity. To address this problem, we propose an Online Judge called CodeBench, which allows for fine‐grained data collection of student interactions, at the level of, eg, keystrokes, number of submissions, and grades. We deployed CodeBench for 3 years (2016–18) and collected data from 2058 students from 16 introductory computer science (CS1) courses, on which we have carried out fine‐grained learning analytics, towards early detection of effective/ineffective behaviours regarding learning CS concepts. Results extract clear behavioural classes of CS1 students, significantly differentiated both semantically and statistically, enabling us to better explain how student behaviours during programming have influenced learning outcomes. Finally, we also identify behaviours that can guide novice students to improve their learning performance, which can be used for interventions. We believe this work is a step forward towards enhancing Online Judges and helping teachers and students improve their CS1 teaching/learning practices.
 									</p>
 									<p class="download text-right">
-										<a href="https://www.researchgate.net/publication/337199317_Validating_the_Effectiveness_of_Data-Driven_Gamification_Recommendations_An_Exploratory_Study">
+										<a href="https://bera-journals.onlinelibrary.wiley.com/doi/abs/10.1111/bjet.12953">
 											<i class="fa fa-download" aria-hidden="true"></i>
 											<span>Link</span>
 										</a>
@@ -210,21 +211,21 @@
 								<li>
 									<h3 class="title">
 										<i class="fa fa-newspaper-o" aria-hidden="true"></i>
-										Exploring Content Game Elements to Support Gamification Design in Educational Systems: Narrative and Storytelling
+										GamiCSM: relating education, culture and gamification-a link between worlds
 									</h3>
 									<h4>
 										<span class="year">
-											2019
+											2020
 										</span>
 										<span class="authors">
-											Paula T. Palomino, Armando M. Toda, Wilk Oliveira, Luiz Rodrigues, Alexandra I. Cristea and Seiji Isotani
+											Armando Toda, Ana Carolina Tomé Klock, Paula T Palomino, Luiz Rodrigues, Wilk Oliveira, Craig Stewart, Alexandra I Cristea, Isabela Gasparini, Seiji Isotani
 										</span>
 									</h4>
 									<p class="abstract">
-										Several studies on gamification applied to educational systems aim at encouraging students to do certain tasks and improving their learning. According to the literature, most gamification frameworks are structural (e.g. scoring systems, ranking, etc.), with few content-related frameworks. To the best of our knowledge, there is no narrative framework available. Therefore this paper analyses data obtained from a survey about the students' preferred game elements in an educational context, with focus on Association Rules found concerning Narrative and Storytelling elements. We show that Narrative and Story-telling are tightly related and provide insights of their use in groups with other game elements, enabling the creation of gamified strategies based on these aspects .
+										The potential of gamification to improve users' motivation and engagement influenced many researchers and professionals to analyse its effects in educational settings. While some studies focus on adapting game elements according to demographic and behavioural information of the user profile, few of them explore (or even consider) cultural factors. These cultural factors play an essential role in our societies' development. Thus, this work proposes and evaluates a representative model to understand better the relationship between cultural factors and gamification within educational domains, namely the Gamification for Cultural Studies Model (GamiCSM). Through a qualitative approach, we map Hofstede's cultural dimensions (i.e., power distance, individualism/collectivism, uncertainty avoidance, masculinity/femininity, long/short-term orientation, and indulgence/restraint) with a Taxonomy of Gamification Elements for Education (TGEEE), a recent model for gamification elements for educational environments. Furthermore, we adapted a survey to evaluate the resultant model with eight domain experts in gamification and education. Based on this evaluation, we are able to propose a starting model, containing some additional refinements and improvements. Thus, the main contributions of this work are: (i) the first model to relate game elements and cultural dimensions within educational domains and (ii) a state-of-the-art empirical study intersecting culture, gamification and education.
 									</p>
 									<p class="download text-right">
-										<a href="https://www.researchgate.net/publication/337199414_Exploring_Content_Game_Elements_to_Support_Gamification_Design_in_Educational_Systems_Narrative_and_Storytelling">
+										<a href="https://www.researchgate.net/publication/347918407_GamiCSM_relating_education_culture_and_gamification_-_a_link_between_worlds?_sg=rdGGHSevyhmp0BoUOVHLaz9LHPhUqZEWtbV-MTYUUo76rYUNrAzZ2qg4QCsZFT7IHm4rwQEQMWx-6EvwCTOFcbwz9Llakf9kdWqCENvW._1pHO0PaHxrhIO9RRy7V-ZElQNUaQer9-SGY9k6nJcUO2tpjW8JLUY223xHCbQ44gE6tPrRHEOaWxk4TH9Lfdw">
 											<i class="fa fa-download" aria-hidden="true"></i>
 											<span>Link</span>
 										</a>
@@ -234,21 +235,20 @@
 								<li>
 									<h3 class="title">
 										<i class="fa fa-newspaper-o" aria-hidden="true"></i>
-										Thinking Inside the Box: How to Tailor Gamified Educational Systems Based on Learning Activities Types
+										Gamification Works, but How and to Whom?: An Experimental Study in the Context of Programming Lessons
 									</h3>
 									<h4>
 										<span class="year">
-											2019
+											2021
 										</span>
 										<span class="authors">
-											Luiz Rodrigues, Wilk Oliveira, Armando M. Toda, Paula T. Palomino and Seiji Isotani
+											Luiz Rodrigues, Armando M Toda, Wilk Oliveira, Paula T Palomino, Anderson Paulo Avila-Santos, Seiji Isotani
 										</span>
 									</h4>
 									<p class="abstract">
-										Selecting gamification elements suitable for specific players (personalization) has been sought to improve the impacts of Gamified Educational Systems (GES). However, the lack of context might be a factor on the inconsistent results of those approaches. To address this lack, we introduce a method for personalizing GES based on learning activities types. The assumption is that selecting gamification elements for specific types of learning activities has the potential to improve GES impact on users by considering the context of each activity and, thus, contributing to their learning process. We describe how to apply our approach, how it differs from user-based methods, as well as discuss three cases of application and challenges yet to be tackled.
-									</p>
+											Programming is a complex, not trivial to learn and teach task, which gamification can facilitate. However, how gamification affects learning and the influence of context-related aspects on that effect demand research to better understand how and to whom gamification enhances programming learning. Therefore, we conducted an experimental study analyzing how gamification worked and the role of context-related aspects in terms of intervention duration and learners' familiarity with programming (i.e., the task's topic). It was a six-week study with 19 undergraduate students from an Algorithms class that measured their learning gains, intrinsic motivation, and number of completed quizzes. Mainly, we found gamification affected learning via intrinsic motivation, effect that depended on intervention duration and learners' familiarity with programming. That is, intrinsic motivation strongly predicted learning gains and gamification's effect on intrinsic motivation changed over time, decreasing from positive to negative as learners had less familiarity with programming. Thus, showing gamification can positively impact programming learning by improving students' intrinsic motivation, although that effect changes over time depending on one's previous familiarity with programming.									</p>
 									<p class="download text-right">
-										<a href="https://www.researchgate.net/publication/337199519_Thinking_Inside_the_Box_How_to_Tailor_Gamified_Educational_Systems_Based_on_Learning_Activities_Types">
+										<a href="https://www.researchgate.net/profile/Luiz-Rodrigues-35/publication/349844886_Gamification_Works_but_How_and_to_Whom_An_Experimental_Study_in_the_Context_of_Programming_Lessons/links/6048aa25299bf1e07869e544/Gamification-Works-but-How-and-to-Whom-An-Experimental-Study-in-the-Context-of-Programming-Lessons.pdf">
 											<i class="fa fa-download" aria-hidden="true"></i>
 											<span>Link</span>
 										</a>
@@ -276,7 +276,7 @@
 										<p>
 											<span class="date">
 												<i class="fa fa-calendar" aria-hidden="true"></i>
-												2016 - Now
+												2016 - 2021
 											</span>
 											<span class="univesity">
 												<i class="fa fa-university" aria-hidden="true"></i>
@@ -284,7 +284,7 @@
 											</span>
 										</p>
 										<p class="title">
-											Title: Computational framework for designing gamification in educational environments
+											Title: Contributions for Gamification Design in Educational Contexts
 											Supervision: Dr. Seiji Isotani and Dr. Alexandra I. Cristea
 										</p>
 									</div>
@@ -403,6 +403,13 @@
 						</div>
 						<div class="col-lg-12">
 							<div class="row">
+								<div class="item col-md-12">
+									<div class="conference"><b>SBIE 2020</b></div>
+									<p class="description">
+										2nd Best Paper Award in Track 2 at the 2020 Simpósio Brasileiro de Informática na Educação @ Online
+									</p>
+								</div>								
+
 								<div class="item col-md-12">
 									<div class="conference"><b>ICALT 2019</b></div>
 									<p class="description">
